8215451: JNI IsSameObject should not keep objects alive

Reviewed-by: eosterlund, kbarrett